# nautilus_trade_examples

./: .dockerignore  .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  README.tr.md  docker-compose.yml  entrypoint.sh  nautilus_trader.dockerfile
archive/: DATA_QUERIES_GUIDE.md  Dockerfile  POSTGRESQL_QUERIES.md  README.tr.md  SYSTEM_OPTIMIZATION.md  docker-compose.yml  pyproject.toml  query_historical_data.py  redis.conf  test_queries.sh
binance/sandbox/: .dockerignore  .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  Makefile  README.md  README.tr.md  docker-compose.yml  health.py  pyproject.toml  requirements.txt  start.sh  test_setup.py
binance/sandbox/src/: client.py  config.py  main.py  strategy.py
binance/sandbox/tests/: test_basic.py
bots/backtest-basics/: README.md  demo_strategy.py  main.py  pyproject.toml  run_backtest.py
bots/binance-spot-testnet/my-first-bot/: README.md  config.py  main.py  mock_data.py  pyproject.toml  strategy.py
bots/binance-spot-testnet/sandbox-bot/: README.md  pyproject.toml
bots/binance/sandbox/: .env.example  PROJECT_SUMMARY.md  README.md  analyze_results.py  coin_selector.py  config.yaml  pyproject.toml  requirements.txt  risk_manager.py  run_backtest.py  test_bot_components.py
bots/binance/testnet/: .coverage  .env.example  .env.test  CURRENT_STATUS.md  README.md  STATUS_REPORT.md  analyze_results.py  config.py  demo_initialization.py  dev.sh  main.py  requirements.txt  run_backtest.py  strategy.py  test_bot_components.py  utils.py
bots/binance/testnet/config/: config.yaml
bots/binance/testnet/strategies/: rsi_mean_reversion.py
bots/binance/testnet/tests/: test_strategy.py  test_utils.py
bots/binance/testnet/utils/: __init__.py  coin_selector.py  risk_manager.py
bots/examples/backtest/example_01_load_bars_from_custom_csv/: README.md  pyproject.toml
bots/my-first-bot/: LOGGING.md  README.md  logging_example.py  main.py  pyproject.toml
bots/one_three/: LICENSE  README_EN.md  README_TR.md  analyze_results.py  main.py  one_three_strategy.py  pyproject.toml  requirements.txt  run_backtest.py  run_live.py  setup.py  test_strategy.py  utils.py
bots/one_three_melih/: LICENSE  README_EN.md  README_TR.md  analyze_results.py  main.py  one_three_melih_strategy.py  pyproject.toml  run_backtest.py  run_live.py  setup.py  test_strategy.py  utils.py
docs/: LOGGING.md  risk-management.md  trading-fundamentals.md
docs/bot-guides/: binance-spot-testnet.md  my-first-bot.md  my-first-bot.tr.md
examples/backtest/01_load_bars_from_custom_csv/: README.md  README.tr.md  download_data.py  main.py  pyproject.toml  requirements.txt  strategy.py
examples/backtest/01_load_bars_from_custom_csv_example/: README.tr.md  main.py
live/: README.md
sandbox/: Dockerfile  README.md  SANDBOX.md  docker-compose.yml  entrypoint.sh  requirements.txt  sandbox_trader.py  setup_env.py  test_setup.py
scripts/: analyze_logs.py
