[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus-sandbox-trader"
version = "0.1.0"
description = "Nautilus Trader sandbox trading bot for Binance testnet"
authors = [
    {name = "Developer", email = "developer@example.com"},
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}

dependencies = [
    "nautilus_trader",
    "python-dotenv>=1.0.0,<2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.black]
target-version = ["py311", "py312"]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
