[project]
name = "binance-spot-trader"
version = "1.0.0"
description = "A minimal, modular, and fully dockerized Binance Spot trading client"
authors = [
    {name = "Trading Team", email = "info@example.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp>=3.9.1,<4.0.0",
    "websockets>=12.0,<13.0.0",
    "requests>=2.31.0,<3.0.0",
    "cryptography>=41.0.8,<42.0.0",
    "pandas>=2.1.4,<3.0.0",
    "numpy>=1.26.2,<2.0.0",
    "asyncio-mqtt>=0.16.1,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.5.2,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "structlog>=23.2.0,<24.0.0",
    "colorlog>=6.8.0,<7.0.0",
    "orjson>=3.9.10,<4.0.0",
    "pytz>=2023.3,<2024.0",
]

[project.urls]
homepage = "https://github.com/your-org/binance-spot-trader"
repository = "https://github.com/your-org/binance-spot-trader"
docs = "https://github.com/your-org/binance-spot-trader#readme"

[build-system]
requires = [
    "setuptools>=80",
    "wheel>=0.42.0",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=25.1.0,<26.0.0",
    "flake8>=6.1.0,<7.0.0",
    "mypy>=1.16.0,<2.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "ipython>=8.0.0,<9.0.0",
    "jupyter>=1.0.0,<2.0.0",
]
test = [
    "pytest>=7.4.4,<8.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.14.1,<4.0.0",
    "coverage>=7.9.1,<8.0.0",
]

[tool.black]
target_version = ["py311", "py312", "py313"]
line_length = 100

[tool.mypy]
python_version = "3.11"
disallow_incomplete_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
no_strict_optional = false
warn_no_return = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --disable-warnings"
asyncio_mode = "strict"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
