[project]
name = "my-first-bot"
version = "0.1.0"
description = "İlk Binance Spot Testnet trading bot"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.4.89",
    "nautilus_trader[binance]>=1.199.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Build system'i kaldırıyoruz - sadece dependency management için kullanacağız
# [build-system] ve [tool.*] sections'ları kaldırıp sadece dependencies'e odaklanalım
