[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-backtest-example"
version = "1.0.0"
description = "Simple CSV data loading and backtesting example with NautilusTrader"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.10"
dependencies = [
    "nautilus_trader>=1.191.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
    "requests>=2.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
